PROJECT(rummiconsole)

FIND_PACKAGE(Boost 1.40 REQUIRED)

AUX_SOURCE_DIRECTORY(. rummiconsole_SOURCES)

INCLUDE_DIRECTORIES(${rummicore_SOURCE_DIR}/include)

ADD_EXECUTABLE(${PROJECT_NAME} ${rummiconsole_SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} rummicore)
INSTALL(TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION bin
)

